Preventing horizontal scrolling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@ body, html {
     margin: 0;
     font-family: 'Lora', serif;
     line-height: 2;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .homepage {
